overflowing issue solved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,6 +155,16 @@ main h1 {
     right: 0;
     margin: 3rem;
 }
+
+@media screen and (max-width: 640px) {
+     
+.go-down-btn {
+    position: static;
+    display: flex;
+    justify-content: end;
+}
+}
+
 .go-down-btn svg {
     position: relative;
     z-index: -1;
